--- a/templates/splash.html
+++ b/templates/splash.html
@@ -44,7 +44,7 @@
 <div class ="splashBackground"> 
   <div class="container">
     <div class="row">
-      <div class="one-third column" style="margin-top:30.6666666667%">
+      <div class="one-third column" style="margin-top:30.6666666667%; margin-bottom:auto">
         <h4>Welcome to</h4>
         <h3>Moonshot Team Builder!</h3>
         <hr>
@@ -55,7 +55,7 @@
             <button class="button-primary" id="login" type="submit">Login</button>
         </form>
       </div>
-      <div class="offset-by-one-third one-third column" style="margin-top:22%;float:right">
+      <div class="offset-by-one-third one-third column" style="margin-top:22%;; margin-bottom:auto; float:right">
         <h4 align="right">Members of Moonshot</h4>
         <hr>
         <li>Tyler Quatraro, Developer
