--- a/static/css/skeleton.css
+++ b/static/css/skeleton.css
@@ -28,6 +28,13 @@
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+.scroll {
+	background-color:transparent;
+	width: 100%;
+	height: 100%;
+	overflow-y: auto;
+}
+
 .container {
   position: relative;
   width: 100%;
@@ -36,6 +43,7 @@
   padding: 0 20px;
   box-sizing: border-box;
   }
+
 .column,
 .columns {
   width: 100%;
@@ -134,7 +142,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
+  color: #FFF; }
 
 
 /* Typography
@@ -446,8 +454,9 @@ th:last-child,
 td:last-child { border-right: 1px solid #E1E1E1; }
 
 table#am {
+	float: left;
     width: 100%;
-    margin-right: 5%;
+    margin-right: 1.5rem;
     margin-bottom: 1.5rem;
 }
 table#am tr:nth-child(even) {
@@ -461,8 +470,9 @@ table#am th {
 }
 
 table#pm {
+	float: right;
     width: 100%;
-    margin-right: 5%;
+    margin-left: 1.5rem;
     margin-bottom: 1.5rem;
 }
 table#pm tr:nth-child(even) {
@@ -565,43 +575,55 @@ there.
 html, body{height:100%;}
 
 .splashBackground {
-  background: url(/static/splash.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-color: #333;
-  top:0;
-  bottom: 0;
-  height: 100%;
+	background: url(/static/splash.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-color: #333;
+	top:0;
+	bottom: 0;
+	height: 100%;
 }
 
 .signupBackground {
-  background: url(/static/signup.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-color: #333;
-  top:0;
-  bottom: 0;
-  height: 100%;
+	background: url(/static/signup.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-color: #333;
+	top:0;
+	bottom: 0;
+	height: 100%;
 }
 
 .dashboardBackground {
-  background: url(/static/dashboard.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-color: #333;
-  top:0;
-  bottom: 0;
-  height: 100%;
+	background: url(/static/dashboard.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-color: #333;
+	top:0;
+	bottom: 0;
+	height: 100%;
 }
 
 .loginBackground {
-  background: url(/static/login.png) no-repeat center center fixed; 
+	background: url(/static/login.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-color: #333;
+	top:0;
+	bottom: 0;
+	height: 100%;
+}
+
+.availBackground {
+  background: url(/static/avail.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -636,8 +658,7 @@ html, body{height:100%;}
 
 #half-left {
     display: inline-block;
-    float: left;
-    margin-top: 10%;
+    margin-top: 1.5rem;
     margin-right: 10%;
     width: 45%;
 }
@@ -645,7 +666,7 @@ html, body{height:100%;}
 #half-right {
   display: inline-block;
   float: right;
-  margin-top: 10%;
+  margin-top: 1.5rem;
   width: 45%;
 }
 
@@ -823,18 +844,21 @@ html, body{height:100%;}
 
 /* Errors */
 .flashesList {
-    margin-top: 5%;
+    margin-bottom: 0;
 }
 .flashes {
-  margin-left: 2%;
+  margin-right: 1.5rem;
+  float: left;
+  display: inline-block;
   background-color: #FCE011;
-  width: 300px;
+  width: 180px;
   border-left: 6px solid;
   height: 35px;
   border-radius: 0px 5px 5px 0px;
-  border-color: #250909;
+  border-color: #CAB30E;
   list-style: none;
   padding-left: 12px;
+  padding-right: 12px;
   font-weight: 700;
   padding-top: 10px;
 }
