--- a/templates/avail.html
+++ b/templates/avail.html
@@ -5,8 +5,8 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Sign-Up: Availability/Skills</title>
-    <meta name="description" content="Sign-Up Page">
+    <title>Availability</title>
+    <meta name="description" content="Availability Page">
     <meta name="author" content="Jared Smith">
                     
 <!-- Mobile Specific Metas
@@ -41,103 +41,185 @@
         
 <!-- Primary Page Layout
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class ="signupBackground">
+	<div class ="availBackground">
+		
+		<!-- Flashed messages before content -->
+		{% with messages = get_flashed_messages() %}
+		{% if messages %}
+		<ul class="flashesList">
+			{% for message in messages %}
+			<li class=flashes>{{ message }}</li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+		{% endwith %}
+		
         <div class="container">
             <div class="row">
-                <div class="column" style="margin-top: 15%">
-                    <h3>Please enter your availability and experience.</h3>
+                <div class="column" style="margin-top: 5%">
+                    <h3>Please enter your current availability.</h3>
                     <hr>
-                    <form method="POST" action="_signup" style="margin: 5% 5% 5% 5%;">
+                    <form method="POST" action="_avail" style="margin: 5% 5% auto 5%; overflow:auto">
                         <div class="signup column">
-                            <table>
+                            <table id="am">
                                 <tr style="background-color:transparent">
                                     <th style="background-color:transparent;border:none">AM</th>
-                                    <th>Su</th> <th>Mo</th> <th>Tu</th> <th>We</th> <th>Th</th> <th>Fr</th> <th>Sa</th>
+									<th>Mo</th> <th>Tu</th> <th>We</th> <th>Th</th> <th>Fr</th>
                                 </tr>
                                 <tr>
                                     <th>08:00</th>
-                                    <td><input type="checkbox" name="su" value="8"></td>
                                     <td><input type="checkbox" name="mo" value="8"></td>
                                     <td><input type="checkbox" name="tu" value="8"></td>
                                     <td><input type="checkbox" name="we" value="8"></td>
                                     <td><input type="checkbox" name="th" value="8"></td>
                                     <td><input type="checkbox" name="fr" value="8"></td>
-                                    <td><input type="checkbox" name="sa" value="8"></td>
                                 </tr>
                                 <tr>
                                     <th>:30</th>
-                                    <td><input type="checkbox" name="su" value="8:30"></td>
                                     <td><input type="checkbox" name="mo" value="8:30"></td>
                                     <td><input type="checkbox" name="tu" value="8:30"></td>
                                     <td><input type="checkbox" name="we" value="8:30"></td>
                                     <td><input type="checkbox" name="th" value="8:30"></td>
                                     <td><input type="checkbox" name="fr" value="8:30"></td>
-                                    <td><input type="checkbox" name="sa" value="8:30"></td>
                                 </tr>
                                 <tr>
                                     <th>09:00</th>
-                                    <td><input type="checkbox" name="su" value="9"></td>
                                     <td><input type="checkbox" name="mo" value="9"></td>
                                     <td><input type="checkbox" name="tu" value="9"></td>
                                     <td><input type="checkbox" name="we" value="9"></td>
                                     <td><input type="checkbox" name="th" value="9"></td>
                                     <td><input type="checkbox" name="fr" value="9"></td>
-                                    <td><input type="checkbox" name="sa" value="9"></td>
                                 </tr>
                                 <tr>
                                     <th>:30</th>
-                                    <td><input type="checkbox" name="su" value="9:30"></td>
                                     <td><input type="checkbox" name="mo" value="9:30"></td>
                                     <td><input type="checkbox" name="tu" value="9:30"></td>
                                     <td><input type="checkbox" name="we" value="9:30"></td>
                                     <td><input type="checkbox" name="th" value="9:30"></td>
                                     <td><input type="checkbox" name="fr" value="9:30"></td>
-                                    <td><input type="checkbox" name="sa" value="9:30"></td>
                                 </tr>
                                 <tr>
                                     <th>10:00</th>
-                                    <td><input type="checkbox" name="su" value="10"></td>
                                     <td><input type="checkbox" name="mo" value="10"></td>
                                     <td><input type="checkbox" name="tu" value="10"></td>
                                     <td><input type="checkbox" name="we" value="10"></td>
                                     <td><input type="checkbox" name="th" value="10"></td>
                                     <td><input type="checkbox" name="fr" value="10"></td>
-                                    <td><input type="checkbox" name="sa" value="10"></td>
                                 </tr>
                                 <tr>
                                     <th>:30</th>
-                                    <td><input type="checkbox" name="su" value="10:30"></td>
                                     <td><input type="checkbox" name="mo" value="10:30"></td>
                                     <td><input type="checkbox" name="tu" value="10:30"></td>
                                     <td><input type="checkbox" name="we" value="10:30"></td>
                                     <td><input type="checkbox" name="th" value="10:30"></td>
                                     <td><input type="checkbox" name="fr" value="10:30"></td>
-                                    <td><input type="checkbox" name="sa" value="10:30"></td>
                                 </tr>
                                 <tr>
                                     <th>11:00</th>
-                                    <td><input type="checkbox" name="su" value="11"></td>
                                     <td><input type="checkbox" name="mo" value="11"></td>
                                     <td><input type="checkbox" name="tu" value="11"></td>
                                     <td><input type="checkbox" name="we" value="11"></td>
                                     <td><input type="checkbox" name="th" value="11"></td>
                                     <td><input type="checkbox" name="fr" value="11"></td>
-                                    <td><input type="checkbox" name="sa" value="11"></td>
                                 </tr>
                                 <tr>
                                     <th>:30</th>
-                                    <td><input type="checkbox" name="su" value="11:30"></td>
                                     <td><input type="checkbox" name="mo" value="11:30"></td>
                                     <td><input type="checkbox" name="tu" value="11:30"></td>
                                     <td><input type="checkbox" name="we" value="11:30"></td>
                                     <td><input type="checkbox" name="th" value="11:30"></td>
                                     <td><input type="checkbox" name="fr" value="11:30"></td>
-                                    <td><input type="checkbox" name="sa" value="11:30"></td>
                                 </tr>
                             </table>
                         </div>
                         <div class="signup column">
-                            <input type="button" id="half-left" onclick="document.location='/'" value="Back"/>
+							<table id="pm">
+								<tr style="background-color:transparent">
+									<th style="background-color:transparent;border:none">PM</th>
+									<th>Mo</th> <th>Tu</th> <th>We</th> <th>Th</th> <th>Fr</th>
+								</tr>
+								<tr>
+									<th>12:00</th>
+									<td><input type="checkbox" name="mo" value="12"></td>
+									<td><input type="checkbox" name="tu" value="12"></td>
+									<td><input type="checkbox" name="we" value="12"></td>
+									<td><input type="checkbox" name="th" value="12"></td>
+									<td><input type="checkbox" name="fr" value="12"></td>
+								</tr>
+								<tr>
+									<th>:30</th>
+									<td><input type="checkbox" name="mo" value="12:30"></td>
+									<td><input type="checkbox" name="tu" value="12:30"></td>
+									<td><input type="checkbox" name="we" value="12:30"></td>
+									<td><input type="checkbox" name="th" value="12:30"></td>
+									<td><input type="checkbox" name="fr" value="12:30"></td>
+								</tr>
+								<tr>
+									<th>13:00</th>
+									<td><input type="checkbox" name="mo" value="13"></td>
+									<td><input type="checkbox" name="tu" value="13"></td>
+									<td><input type="checkbox" name="we" value="13"></td>
+									<td><input type="checkbox" name="th" value="13"></td>
+									<td><input type="checkbox" name="fr" value="13"></td>
+								</tr>
+								<tr>
+									<th>:30</th>
+									<td><input type="checkbox" name="mo" value="13:30"></td>
+									<td><input type="checkbox" name="tu" value="13:30"></td>
+									<td><input type="checkbox" name="we" value="13:30"></td>
+									<td><input type="checkbox" name="th" value="13:30"></td>
+									<td><input type="checkbox" name="fr" value="13:30"></td>
+								</tr>
+								<tr>
+									<th>14:00</th>
+									<td><input type="checkbox" name="mo" value="14"></td>
+									<td><input type="checkbox" name="tu" value="14"></td>
+									<td><input type="checkbox" name="we" value="14"></td>
+									<td><input type="checkbox" name="th" value="14"></td>
+									<td><input type="checkbox" name="fr" value="14"></td>
+								</tr>
+								<tr>
+									<th>:30</th>
+									<td><input type="checkbox" name="mo" value="14:30"></td>
+									<td><input type="checkbox" name="tu" value="14:30"></td>
+									<td><input type="checkbox" name="we" value="14:30"></td>
+									<td><input type="checkbox" name="th" value="14:30"></td>
+									<td><input type="checkbox" name="fr" value="14:30"></td>
+								</tr>
+								<tr>
+									<th>15:00</th>
+									<td><input type="checkbox" name="mo" value="15"></td>
+									<td><input type="checkbox" name="tu" value="15"></td>
+									<td><input type="checkbox" name="we" value="15"></td>
+									<td><input type="checkbox" name="th" value="15"></td>
+									<td><input type="checkbox" name="fr" value="15"></td>
+								</tr>
+								<tr>
+									<th>:30</th>
+									<td><input type="checkbox" name="mo" value="15:30"></td>
+									<td><input type="checkbox" name="tu" value="15:30"></td>
+									<td><input type="checkbox" name="we" value="15:30"></td>
+									<td><input type="checkbox" name="th" value="15:30"></td>
+									<td><input type="checkbox" name="fr" value="15:30"></td>
+								</tr>
+								<tr>
+									<th>16:00</th>
+									<td><input type="checkbox" name="mo" value="16"></td>
+									<td><input type="checkbox" name="tu" value="16"></td>
+									<td><input type="checkbox" name="we" value="16"></td>
+									<td><input type="checkbox" name="th" value="16"></td>
+									<td><input type="checkbox" name="fr" value="16"></td>
+								</tr>
+								<tr>
+									<th>:30</th>
+									<td><input type="checkbox" name="mo" value="16:30"></td>
+									<td><input type="checkbox" name="tu" value="16:30"></td>
+									<td><input type="checkbox" name="we" value="16:30"></td>
+									<td><input type="checkbox" name="th" value="16:30"></td>
+									<td><input type="checkbox" name="fr" value="16:30"></td>
+								</tr>
+							</table>
+                            <input type="button" id="half-left" onclick="document.location='/login'" value="Back"/>
                             <input class="button-primary" id="half-right" type="submit" value="Next">
                         </div>
                     </form>
