--- a/static/css/skeleton.css
+++ b/static/css/skeleton.css
@@ -159,7 +159,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #FFF; }
+  color: #333; }
 
 
 /* Typography
