--- a/templates/signup.html
+++ b/templates/signup.html
@@ -47,19 +47,45 @@
       <h3>Please enter your information.</h3>
       <hr>
       <form method="POST" action="_signup" style="margin: 5% 5% auto 5%">
+		  
+		<!-- Left Column -->
         <div class="signup column">
+			
+			<!-- First Name Input -->
             <label for="RegisterFirstNameInput">First Name</label>
-            <input class="u-full-width" type="text" placeholder="First Name" id="RegisterFirstNameInput" name="RegisterFirstNameInput">
-                  
+			{% if session.first %}
+				<input class="u-full-width" type="text" value="{{ session.first }}" placeholder="First Name" id="RegisterFirstNameInput" name="RegisterFirstNameInput">
+			{% else %}
+				<input class="u-full-width" type="text" placeholder="First Name" id="RegisterFirstNameInput" name="RegisterFirstNameInput">
+			{% endif %}
+			
+			<!-- Last Name Input -->
             <label for="RegisterLastNameInput">Last Name</label>
-            <input class="u-full-width" type="text" placeholder="Last Name" id="RegisterLastNameInput" name="RegisterLastNameInput">
-                          
-            <label for="RegisterIDInput">Student ID</label>
-            <input class="u-full-width" type="text" placeholder="951234567" id="RegisterIDInput" name="RegisterIDInput">
+			{% if session.last %}
+				<input class="u-full-width" type="text" value="{{ session.last }}" placeholder="Last Name" id="RegisterLastNameInput" name="RegisterLastNameInput">
+			{% else %}
+				<input class="u-full-width" type="text" placeholder="Last Name" id="RegisterLastNameInput" name="RegisterLastNameInput">
+			{% endif %}
+			
+			<!-- Student ID Input -->
+			<label for="RegisterIDInput">Student ID</label>
+			{% if session.id %}
+				<input class="u-full-width" type="text" value="{{ session.id }}" placeholder="951234567" id="RegisterIDInput" name="RegisterIDInput">
+			{% else %}
+				<input class="u-full-width" type="text" placeholder="951234567" id="RegisterIDInput" name="RegisterIDInput">
+			{% endif %}
         </div>
+		
+		<!-- Right Column -->
         <div class="signup column">
+			
+			<!-- E-mail Input -->
             <label for="LoginEmailInput">Your e-mail</label>
-            <input class="u-full-width" type="email" placeholder="duckid@uoregon.edu" id="RegisterEmailInput" name="RegisterEmailInput">
+			{% if session.email %}
+				<input class="u-full-width" type="email" value="{{ session.email }}" placeholder="duckid@uoregon.edu" id="RegisterEmailInput" name="RegisterEmailInput">
+			{% else %}
+				<input class="u-full-width" type="email" placeholder="duckid@uoregon.edu" id="RegisterEmailInput" name="RegisterEmailInput">
+			{% endif %}
                 
             <label for="RegisterPasswordInput">Your password</label>
             <input class="u-full-width" type="password" placeholder="Password" id="RegisterPasswordInput" name="RegisterPasswordInput">
