Avail. Progress Update

--- a/templates/avail.html
+++ b/templates/avail.html
@@ -219,7 +219,7 @@
 									<td><input type="checkbox" name="fr" value="16:30"></td>
 								</tr>
 							</table>
-                            <input type="button" id="half-left" onclick="document.location='/login'" value="Back"/>
+                            <input type="button" id="half-left" onclick="document.location='/signup'" value="Back"/>
                             <input class="button-primary" id="half-right" type="submit" value="Next">
                         </div>
                     </form>
