Availability Page Progress

--- a/templates/avail.html
+++ b/templates/avail.html
@@ -68,67 +68,67 @@
                                 </tr>
                                 <tr>
                                     <th>08:00</th>
-                                    <td><input type="checkbox" name="mo" value="8"></td>
-                                    <td><input type="checkbox" name="tu" value="8"></td>
-                                    <td><input type="checkbox" name="we" value="8"></td>
-                                    <td><input type="checkbox" name="th" value="8"></td>
-                                    <td><input type="checkbox" name="fr" value="8"></td>
+                                    <td><input type="checkbox" name="mo8" value="8"></td>
+                                    <td><input type="checkbox" name="tu8" value="8"></td>
+                                    <td><input type="checkbox" name="we8" value="8"></td>
+                                    <td><input type="checkbox" name="th8" value="8"></td>
+                                    <td><input type="checkbox" name="fr8" value="8"></td>
                                 </tr>
                                 <tr>
                                     <th>:30</th>
-                                    <td><input type="checkbox" name="mo" value="8:30"></td>
-                                    <td><input type="checkbox" name="tu" value="8:30"></td>
-                                    <td><input type="checkbox" name="we" value="8:30"></td>
-                                    <td><input type="checkbox" name="th" value="8:30"></td>
-                                    <td><input type="checkbox" name="fr" value="8:30"></td>
+                                    <td><input type="checkbox" name="mo830" value="8:30"></td>
+                                    <td><input type="checkbox" name="tu830" value="8:30"></td>
+                                    <td><input type="checkbox" name="we830" value="8:30"></td>
+                                    <td><input type="checkbox" name="th830" value="8:30"></td>
+                                    <td><input type="checkbox" name="fr830" value="8:30"></td>
                                 </tr>
                                 <tr>
                                     <th>09:00</th>
-                                    <td><input type="checkbox" name="mo" value="9"></td>
-                                    <td><input type="checkbox" name="tu" value="9"></td>
-                                    <td><input type="checkbox" name="we" value="9"></td>
-                                    <td><input type="checkbox" name="th" value="9"></td>
-                                    <td><input type="checkbox" name="fr" value="9"></td>
+                                    <td><input type="checkbox" name="mo9" value="9"></td>
+                                    <td><input type="checkbox" name="tu9" value="9"></td>
+                                    <td><input type="checkbox" name="we9" value="9"></td>
+                                    <td><input type="checkbox" name="th9" value="9"></td>
+                                    <td><input type="checkbox" name="fr9" value="9"></td>
                                 </tr>
                                 <tr>
                                     <th>:30</th>
-                                    <td><input type="checkbox" name="mo" value="9:30"></td>
-                                    <td><input type="checkbox" name="tu" value="9:30"></td>
-                                    <td><input type="checkbox" name="we" value="9:30"></td>
-                                    <td><input type="checkbox" name="th" value="9:30"></td>
-                                    <td><input type="checkbox" name="fr" value="9:30"></td>
+                                    <td><input type="checkbox" name="mo930" value="9:30"></td>
+                                    <td><input type="checkbox" name="tu930" value="9:30"></td>
+                                    <td><input type="checkbox" name="we930" value="9:30"></td>
+                                    <td><input type="checkbox" name="th930" value="9:30"></td>
+                                    <td><input type="checkbox" name="fr930" value="9:30"></td>
                                 </tr>
                                 <tr>
                                     <th>10:00</th>
-                                    <td><input type="checkbox" name="mo" value="10"></td>
-                                    <td><input type="checkbox" name="tu" value="10"></td>
-                                    <td><input type="checkbox" name="we" value="10"></td>
-                                    <td><input type="checkbox" name="th" value="10"></td>
-                                    <td><input type="checkbox" name="fr" value="10"></td>
+                                    <td><input type="checkbox" name="mo10" value="10"></td>
+                                    <td><input type="checkbox" name="tu10" value="10"></td>
+                                    <td><input type="checkbox" name="we10" value="10"></td>
+                                    <td><input type="checkbox" name="th10" value="10"></td>
+                                    <td><input type="checkbox" name="fr10" value="10"></td>
                                 </tr>
                                 <tr>
                                     <th>:30</th>
-                                    <td><input type="checkbox" name="mo" value="10:30"></td>
-                                    <td><input type="checkbox" name="tu" value="10:30"></td>
-                                    <td><input type="checkbox" name="we" value="10:30"></td>
-                                    <td><input type="checkbox" name="th" value="10:30"></td>
-                                    <td><input type="checkbox" name="fr" value="10:30"></td>
+                                    <td><input type="checkbox" name="mo1030" value="10:30"></td>
+                                    <td><input type="checkbox" name="tu1030" value="10:30"></td>
+                                    <td><input type="checkbox" name="we1030" value="10:30"></td>
+                                    <td><input type="checkbox" name="th1030" value="10:30"></td>
+                                    <td><input type="checkbox" name="fr1030" value="10:30"></td>
                                 </tr>
                                 <tr>
                                     <th>11:00</th>
-                                    <td><input type="checkbox" name="mo" value="11"></td>
-                                    <td><input type="checkbox" name="tu" value="11"></td>
-                                    <td><input type="checkbox" name="we" value="11"></td>
-                                    <td><input type="checkbox" name="th" value="11"></td>
-                                    <td><input type="checkbox" name="fr" value="11"></td>
+                                    <td><input type="checkbox" name="mo11" value="11"></td>
+                                    <td><input type="checkbox" name="tu11" value="11"></td>
+                                    <td><input type="checkbox" name="we11" value="11"></td>
+                                    <td><input type="checkbox" name="th11" value="11"></td>
+                                    <td><input type="checkbox" name="fr11" value="11"></td>
                                 </tr>
                                 <tr>
                                     <th>:30</th>
-                                    <td><input type="checkbox" name="mo" value="11:30"></td>
-                                    <td><input type="checkbox" name="tu" value="11:30"></td>
-                                    <td><input type="checkbox" name="we" value="11:30"></td>
-                                    <td><input type="checkbox" name="th" value="11:30"></td>
-                                    <td><input type="checkbox" name="fr" value="11:30"></td>
+                                    <td><input type="checkbox" name="mo1130" value="11:30"></td>
+                                    <td><input type="checkbox" name="tu1130" value="11:30"></td>
+                                    <td><input type="checkbox" name="we1130" value="11:30"></td>
+                                    <td><input type="checkbox" name="th1130" value="11:30"></td>
+                                    <td><input type="checkbox" name="fr1130" value="11:30"></td>
                                 </tr>
                             </table>
                         </div>
@@ -140,83 +140,83 @@
 								</tr>
 								<tr>
 									<th>12:00</th>
-									<td><input type="checkbox" name="mo" value="12"></td>
-									<td><input type="checkbox" name="tu" value="12"></td>
-									<td><input type="checkbox" name="we" value="12"></td>
-									<td><input type="checkbox" name="th" value="12"></td>
-									<td><input type="checkbox" name="fr" value="12"></td>
+									<td><input type="checkbox" name="mo12" value="12"></td>
+									<td><input type="checkbox" name="tu12" value="12"></td>
+									<td><input type="checkbox" name="we12" value="12"></td>
+									<td><input type="checkbox" name="th12" value="12"></td>
+									<td><input type="checkbox" name="fr12" value="12"></td>
 								</tr>
 								<tr>
 									<th>:30</th>
-									<td><input type="checkbox" name="mo" value="12:30"></td>
-									<td><input type="checkbox" name="tu" value="12:30"></td>
-									<td><input type="checkbox" name="we" value="12:30"></td>
-									<td><input type="checkbox" name="th" value="12:30"></td>
-									<td><input type="checkbox" name="fr" value="12:30"></td>
+									<td><input type="checkbox" name="mo1230" value="12:30"></td>
+									<td><input type="checkbox" name="tu1230" value="12:30"></td>
+									<td><input type="checkbox" name="we1230" value="12:30"></td>
+									<td><input type="checkbox" name="th1230" value="12:30"></td>
+									<td><input type="checkbox" name="fr1230" value="12:30"></td>
 								</tr>
 								<tr>
 									<th>13:00</th>
-									<td><input type="checkbox" name="mo" value="13"></td>
-									<td><input type="checkbox" name="tu" value="13"></td>
-									<td><input type="checkbox" name="we" value="13"></td>
-									<td><input type="checkbox" name="th" value="13"></td>
-									<td><input type="checkbox" name="fr" value="13"></td>
+									<td><input type="checkbox" name="mo13" value="13"></td>
+									<td><input type="checkbox" name="tu13" value="13"></td>
+									<td><input type="checkbox" name="we13" value="13"></td>
+									<td><input type="checkbox" name="th13" value="13"></td>
+									<td><input type="checkbox" name="fr13" value="13"></td>
 								</tr>
 								<tr>
 									<th>:30</th>
-									<td><input type="checkbox" name="mo" value="13:30"></td>
-									<td><input type="checkbox" name="tu" value="13:30"></td>
-									<td><input type="checkbox" name="we" value="13:30"></td>
-									<td><input type="checkbox" name="th" value="13:30"></td>
-									<td><input type="checkbox" name="fr" value="13:30"></td>
+									<td><input type="checkbox" name="mo1330" value="13:30"></td>
+									<td><input type="checkbox" name="tu1330" value="13:30"></td>
+									<td><input type="checkbox" name="we1330" value="13:30"></td>
+									<td><input type="checkbox" name="th1330" value="13:30"></td>
+									<td><input type="checkbox" name="fr1330" value="13:30"></td>
 								</tr>
 								<tr>
 									<th>14:00</th>
-									<td><input type="checkbox" name="mo" value="14"></td>
-									<td><input type="checkbox" name="tu" value="14"></td>
-									<td><input type="checkbox" name="we" value="14"></td>
-									<td><input type="checkbox" name="th" value="14"></td>
-									<td><input type="checkbox" name="fr" value="14"></td>
+									<td><input type="checkbox" name="mo14" value="14"></td>
+									<td><input type="checkbox" name="tu14" value="14"></td>
+									<td><input type="checkbox" name="we14" value="14"></td>
+									<td><input type="checkbox" name="th14" value="14"></td>
+									<td><input type="checkbox" name="fr14" value="14"></td>
 								</tr>
 								<tr>
 									<th>:30</th>
-									<td><input type="checkbox" name="mo" value="14:30"></td>
-									<td><input type="checkbox" name="tu" value="14:30"></td>
-									<td><input type="checkbox" name="we" value="14:30"></td>
-									<td><input type="checkbox" name="th" value="14:30"></td>
-									<td><input type="checkbox" name="fr" value="14:30"></td>
+									<td><input type="checkbox" name="mo1430" value="14:30"></td>
+									<td><input type="checkbox" name="tu1430" value="14:30"></td>
+									<td><input type="checkbox" name="we1430" value="14:30"></td>
+									<td><input type="checkbox" name="th1430" value="14:30"></td>
+									<td><input type="checkbox" name="fr1430" value="14:30"></td>
 								</tr>
 								<tr>
 									<th>15:00</th>
-									<td><input type="checkbox" name="mo" value="15"></td>
-									<td><input type="checkbox" name="tu" value="15"></td>
-									<td><input type="checkbox" name="we" value="15"></td>
-									<td><input type="checkbox" name="th" value="15"></td>
-									<td><input type="checkbox" name="fr" value="15"></td>
+									<td><input type="checkbox" name="mo15" value="15"></td>
+									<td><input type="checkbox" name="tu15" value="15"></td>
+									<td><input type="checkbox" name="we15" value="15"></td>
+									<td><input type="checkbox" name="th15" value="15"></td>
+									<td><input type="checkbox" name="fr15" value="15"></td>
 								</tr>
 								<tr>
 									<th>:30</th>
-									<td><input type="checkbox" name="mo" value="15:30"></td>
-									<td><input type="checkbox" name="tu" value="15:30"></td>
-									<td><input type="checkbox" name="we" value="15:30"></td>
-									<td><input type="checkbox" name="th" value="15:30"></td>
-									<td><input type="checkbox" name="fr" value="15:30"></td>
+									<td><input type="checkbox" name="mo1530" value="15:30"></td>
+									<td><input type="checkbox" name="tu1530" value="15:30"></td>
+									<td><input type="checkbox" name="we1530" value="15:30"></td>
+									<td><input type="checkbox" name="th1530" value="15:30"></td>
+									<td><input type="checkbox" name="fr1530" value="15:30"></td>
 								</tr>
 								<tr>
 									<th>16:00</th>
-									<td><input type="checkbox" name="mo" value="16"></td>
-									<td><input type="checkbox" name="tu" value="16"></td>
-									<td><input type="checkbox" name="we" value="16"></td>
-									<td><input type="checkbox" name="th" value="16"></td>
-									<td><input type="checkbox" name="fr" value="16"></td>
+									<td><input type="checkbox" name="mo16" value="16"></td>
+									<td><input type="checkbox" name="tu16" value="16"></td>
+									<td><input type="checkbox" name="we16" value="16"></td>
+									<td><input type="checkbox" name="th16" value="16"></td>
+									<td><input type="checkbox" name="fr16" value="16"></td>
 								</tr>
 								<tr>
 									<th>:30</th>
-									<td><input type="checkbox" name="mo" value="16:30"></td>
-									<td><input type="checkbox" name="tu" value="16:30"></td>
-									<td><input type="checkbox" name="we" value="16:30"></td>
-									<td><input type="checkbox" name="th" value="16:30"></td>
-									<td><input type="checkbox" name="fr" value="16:30"></td>
+									<td><input type="checkbox" name="mo1630" value="16:30"></td>
+									<td><input type="checkbox" name="tu1630" value="16:30"></td>
+									<td><input type="checkbox" name="we1630" value="16:30"></td>
+									<td><input type="checkbox" name="th1630" value="16:30"></td>
+									<td><input type="checkbox" name="fr1630" value="16:30"></td>
 								</tr>
 							</table>
                             <input type="button" id="half-left" onclick="document.location='/signup'" value="Back"/>
