--- a/static/css/skeleton.css
+++ b/static/css/skeleton.css
@@ -46,13 +46,6 @@
     width: 100%;
 }
 
-.scroll {
-	background-color:transparent;
-	width: 100%;
-	height: 100%;
-	overflow-y: auto;
-}
-
 .container {
   position: relative;
   width: 100%;
@@ -460,7 +453,7 @@ th {
 }
 td {
   color: #FFF;
-  padding: 5px 5px;
+  padding: 0px 5px;
   text-align: center;
   border-right: 1px solid #E1E1E1;
   border-bottom: 1px solid #E1E1E1;
@@ -474,14 +467,17 @@ table#am {
 	float: left;
     width: 100%;
     margin-right: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0rem;
 }
+
 table#am tr:nth-child(even) {
     background-color: #CAB30E;
 }
+
 table#am tr:nth-child(odd) {
     background-color: #FCE011;
 }
+
 table#am th {
     background-color: #006B59;
 }
@@ -492,12 +488,15 @@ table#pm {
     margin-left: 1.5rem;
     margin-bottom: 1.5rem;
 }
+
 table#pm tr:nth-child(even) {
     background-color: #FCE011;
 }
+
 table#pm tr:nth-child(odd) {
     background-color: #CAB30E;
 }
+
 table#pm th {
     background-color: #00483C;
 }
@@ -649,6 +648,18 @@ html, body{height:100%;}
   top:0;
   bottom: 0;
   height: 100%;
+}
+
+.expBackground {
+	background: url(/static/exp.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-color: #333;
+	top:0;
+	bottom: 0;
+	height: 100%;
 }
 
 .loginBackground label {
