--- a/templates/exp.html
+++ b/templates/exp.html
@@ -49,9 +49,82 @@
 				  <h3>Please enter your relevant experience.</h3>
 				  <hr>
 				  <form method="POST" action="_avail" style="margin: 5% 5% auto 5%; overflow:auto">
-							
-					  <input type="button" id="half-left" onclick="document.location='/avail'" value="Back"/>
-					  <input class="button-primary" id="half-right" type="submit" value="Sign Up">
+					  <div class="signup column">
+						  <table id="lang">
+							  <tr>
+								  <th>Language</th> <th>Proficiency<br><h5>5 - Best</h5></th>
+							  </tr>
+							  <tr>
+								  <th>Java</th>
+								  <td>
+									  <select class="u-full-width" name="java">
+										  <option value="">None</option>
+										  <option value="1">1</option>
+										  <option value="2">2</option>
+										  <option value="3">3</option>
+										  <option value="4">4</option>
+										  <option value="5">5</option>
+									  </select>
+								  </td>
+							  </tr>
+							  <tr>
+								  <th>C/C++</th>
+								  <td>
+									  <select class="u-full-width" name="c">
+										  <option value="">None</option>
+										  <option value="1">1</option>
+										  <option value="2">2</option>
+										  <option value="3">3</option>
+										  <option value="4">4</option>
+										  <option value="5">5</option>
+									  </select>
+								  </td>
+							  </tr>
+							  <tr>
+								  <th>Python</th>
+								  <td>
+									  <select class="u-full-width" name="python">
+										  <option value="">None</option>
+										  <option value="1">1</option>
+										  <option value="2">2</option>
+										  <option value="3">3</option>
+										  <option value="4">4</option>
+										  <option value="5">5</option>
+									  </select>
+								  </td>
+							  </tr>
+							  <tr>
+								  <th>HTML/PHP</th>
+								  <td>
+									  <select class="u-full-width" name="html">
+										  <option value="">None</option>
+										  <option value="1">1</option>
+										  <option value="2">2</option>
+										  <option value="3">3</option>
+										  <option value="4">4</option>
+										  <option value="5">5</option>
+									  </select>
+								  </td>
+							  </tr>
+							  <tr>
+								  <th>Javascript</th>
+								  <td>
+									  <select class="u-full-width" name="javascript">
+										  <option value="">None</option>
+										  <option value="1">1</option>
+										  <option value="2">2</option>
+										  <option value="3">3</option>
+										  <option value="4">4</option>
+										  <option value="5">5</option>
+									  </select>
+								  </td>
+							  </tr>
+						  </table>
+					  </div>
+					  <div class="signup column">
+						  <input type="button" id="half-left" onclick="document.location='/avail'" value="Back"/>
+						  <input class="button-primary" id="half-right" type="submit" value="Sign Up">
+					  </div>
 				  </form>
 			  </div>
 		  </div>
